WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266488
[iOS] Chrome crashes when showing an edit menu when async text input is enabled
https://bugs.webkit.org/show_bug.cgi?id=266488
Summary
[iOS] Chrome crashes when showing an edit menu when async text input is enabled
Wenson Hsieh
Reported
2023-12-15 09:21:18 PST
rdar://119720176
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-12-15 09:26:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21872
EWS
Comment 2
2023-12-15 13:31:24 PST
Committed
272144@main
(9032fde71088): <
https://commits.webkit.org/272144@main
> Reviewed commits have been landed. Closing PR #21872 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug